Added peak and avg traffic scenarios

--- a/location_visualizer.html
+++ b/location_visualizer.html
@@ -18,70 +18,70 @@
 
         new google.maps.Marker({
             position: new google.maps.LatLng(40.757000, -73.985970),
-            title: "Times Square (Broadway & 7th Ave)",
+            title: "Times Square",
             icon: marker_icon_6495ED,
             map: map
         });
 
         new google.maps.Marker({
             position: new google.maps.LatLng(40.759260, -73.979960),
-            title: "Rockefeller Center (45 Rockefeller Plaza)",
+            title: "Rockefeller Center",
             icon: marker_icon_6495ED,
             map: map
         });
 
         new google.maps.Marker({
             position: new google.maps.LatLng(40.753610, -73.984170),
-            title: "Bryant Park / New York Public Library (42nd St & 6th Ave)",
+            title: "Bryant Park / NYPL",
             icon: marker_icon_6495ED,
             map: map
         });
 
         new google.maps.Marker({
             position: new google.maps.LatLng(40.752730, -73.977230),
-            title: "Grand Central Terminal (89 E 42nd St)",
+            title: "Grand Central Terminal",
             icon: marker_icon_6495ED,
             map: map
         });
 
         new google.maps.Marker({
             position: new google.maps.LatLng(40.748440, -73.985660),
-            title: "Empire State Building (350 5th Ave)",
+            title: "Empire State Building",
             icon: marker_icon_6495ED,
             map: map
         });
 
         new google.maps.Marker({
             position: new google.maps.LatLng(40.741030, -73.989690),
-            title: "Flatiron Building / Madison Square Park (23rd St & 5th Ave)",
+            title: "Flatiron / Madison Sq Park",
             icon: marker_icon_6495ED,
             map: map
         });
 
         new google.maps.Marker({
             position: new google.maps.LatLng(40.736700, -73.989900),
-            title: "Union Square (14th St & Broadway)",
+            title: "Union Square",
             icon: marker_icon_6495ED,
             map: map
         });
 
         new google.maps.Marker({
             position: new google.maps.LatLng(40.738800, -74.003700),
-            title: "Chelsea / Chelsea Market (15th St / High Line access near Gansevoort)",
+            title: "Chelsea Market",
             icon: marker_icon_6495ED,
             map: map
         });
 
         new google.maps.Marker({
             position: new google.maps.LatLng(40.730820, -73.997330),
-            title: "Washington Square Park (W 4th St, Greenwich Village)",
+            title: "Washington Square Park",
             icon: marker_icon_6495ED,
             map: map
         });
 
         new google.maps.Marker({
             position: new google.maps.LatLng(40.703140, -74.016000),
-            title: "Battery Park / South Ferry (southern tip of Manhattan)",
+            title: "Battery Park / South Ferry",
             icon: marker_icon_6495ED,
             map: map
         });
